--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,7 @@ dev = [
     "mypy",
     "isort",
     "pre-commit",
+    "sphinx",
 ]
 test = [
     "pytest>=7.0.0",
@@ -84,4 +85,5 @@ filterwarnings = [
     "error",
     "ignore::UserWarning",
     "ignore::DeprecationWarning",
+    "ignore::PendingDeprecationWarning",
 ]
