--- a/docs/CMakeLists.txt
+++ b/docs/CMakeLists.txt
@@ -7,18 +7,22 @@ set(SPHINX_BUILD ${CMAKE_BINARY_DIR})
 
 # Build HTML documentation
 add_custom_target(html
-    COMMAND ${SPHINX_EXECUTABLE} -b html ${SPHINX_SOURCE} ${SPHINX_BUILD}
-    COMMENT "Building HTML documentation"
+    COMMAND ${SPHINX_EXECUTABLE} -b html ${SPHINX_SOURCE} ${SPHINX_BUILD}/html
     VERBATIM
 )
 
 # Build markdown documentation
 add_custom_target(markdown
-    COMMAND ${SPHINX_EXECUTABLE} -b markdown ${SPHINX_SOURCE} ${SPHINX_BUILD}
-    COMMENT "Building Markdown documentation"
+    COMMAND ${SPHINX_EXECUTABLE} -b markdown ${SPHINX_SOURCE} ${SPHINX_BUILD}/markdown
     VERBATIM
 )
 
-# Build both formats
+# Build singlemarkdown documentation and rename to llms-full.txt
+add_custom_target(singlemarkdown
+    COMMAND ${SPHINX_EXECUTABLE} -b singlemarkdown ${SPHINX_SOURCE} ${SPHINX_BUILD}/singlemarkdown
+    VERBATIM
+)
+
+# Build all formats
 add_custom_target(docs ALL)
-add_dependencies(docs html markdown)
+add_dependencies(docs html markdown singlemarkdown)
