change to add_sphinx_builder function

--- a/docs/CMakeLists.txt
+++ b/docs/CMakeLists.txt
@@ -5,24 +5,18 @@ setup_sphinx_environment()
 set(SPHINX_SOURCE ${CMAKE_CURRENT_SOURCE_DIR}/source)
 set(SPHINX_BUILD ${CMAKE_BINARY_DIR})
 
-# Build HTML documentation
-add_custom_target(html
-    COMMAND ${SPHINX_EXECUTABLE} -b html ${SPHINX_SOURCE} ${SPHINX_BUILD}/html
-    VERBATIM
-)
-
-# Build markdown documentation
-add_custom_target(markdown
-    COMMAND ${SPHINX_EXECUTABLE} -b markdown ${SPHINX_SOURCE} ${SPHINX_BUILD}/markdown
-    VERBATIM
-)
-
-# Build singlemarkdown documentation and rename to llms-full.txt
-add_custom_target(singlemarkdown
-    COMMAND ${SPHINX_EXECUTABLE} -b singlemarkdown ${SPHINX_SOURCE} ${SPHINX_BUILD}/singlemarkdown
-    VERBATIM
-)
+# Function to add a Sphinx builder target
+function(add_sphinx_builder builder_name)
+    add_custom_target(${builder_name}
+        COMMAND ${SPHINX_EXECUTABLE} -b ${builder_name} ${SPHINX_SOURCE} ${SPHINX_BUILD}/${builder_name}
+        VERBATIM
+    )
+endfunction()
 
 # Build all formats
 add_custom_target(docs ALL)
 add_dependencies(docs html markdown singlemarkdown)
+# Add builder targets
+add_sphinx_builder(html)
+add_sphinx_builder(markdown)
+add_sphinx_builder(singlemarkdown)
