--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -2,6 +2,8 @@ furo
 esbonio
 sphinx-contributors
 sphinx
+sphinx-autobuild
+sphinx-design
 sphinx-llms-txt
 sphinx-inline-tabs
 sphinxext-opengraph
